--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 {% else %}
   {% assign pages = site.pages | where_exp: "item", "item.title and item.sitemap != false" | sort: "order" %}
 {% endif %}
+{% include twitter-card.html %}
 
 <header>
   <a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a>
